# duck.bak

./: .gitignore  CMakeLists.txt  Makefile  gs_object.h  gs_object_test.c
inc/: duck.h
src/: duck.c  gs_object.c
test/: duck_test.c  main.c
